--- a/src/components/feed/feed.sass
+++ b/src/components/feed/feed.sass
@@ -8,3 +8,29 @@
     &__settings
         width: 40px
         height: auto
+
+.news
+    padding-bottom: 100px
+.events
+    padding-bottom: 100px
+
+.content
+    &__title
+        position: relative
+        margin-bottom: 70px
+        display: inline-block
+        text-decoration: none
+        &::after
+            content: " "
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 0
+            height: 3px
+            background-color: #FF5555
+            transition: 0.3s all
+            cursor: pointer
+            border-radius: 10px
+        &:hover::after
+            width: 100%
+            
