--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -1,5 +1,7 @@
+@import "variables"
+    
 .btn
-    background: #FF5555
+    background: $red
     padding: 16px 50px
     border-radius: 8px
     border: none
