--- a/src/components/feed/feed.sass
+++ b/src/components/feed/feed.sass
@@ -1,3 +1,5 @@
+@import "../../styles/variables"
+    
 .top
     padding-top: 90px
     padding-bottom: 70px
@@ -8,6 +10,11 @@
     &__settings
         width: 40px
         height: auto
+        transform: rotate(0deg)
+        cursor: pointer
+        transition: 0.5s all
+        &:hover
+            transform: rotate(90deg)
 
 .news
     padding-bottom: 100px
@@ -27,10 +34,16 @@
             left: 0
             width: 0
             height: 3px
-            background-color: #FF5555
+            background-color: $red
             transition: 0.3s all
             cursor: pointer
             border-radius: 10px
         &:hover::after
             width: 100%
+
+@keyframes fadein
+    0%
+        opacity: 0
+    100%
+        opacity: 1
             
