add component for single event and news

--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -16,3 +16,14 @@
         background: #FF3535
     &:active
         background: #FF1515
+    &_yellow
+        background: $second
+        font-style: normal
+        font-weight: 400
+        font-size: 14px
+        color: #000000
+        padding: 7px 21px
+        &:hover
+            background: #FBFF51
+        &:active
+            background: #FAFF1B
