--- a/src/components/contentList/contentList.sass
+++ b/src/components/contentList/contentList.sass
@@ -66,6 +66,7 @@
         &__text
             &--descr
                 margin-top: 10px
+                line-height: 25px
         &:nth-child(1)
             grid-column-start: 1
             grid-column-end: 3
