add single page for events and discussions

--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -2,14 +2,15 @@
     
 .header
     background: #222222
-    padding-top: 22px
-    padding-bottom: 22px
+    padding-top: 15px
+    padding-bottom: 15px
+    margin-bottom: 80px
     &__wrapper
         display: flex
         justify-content: space-between
         align-items: center
     &__logo
-        max-height: 44px
+        max-height: 35px
         width: auto
     &__menu
         list-style: none
@@ -20,11 +21,10 @@
                 text-decoration: none
                 font-style: normal
                 font-weight: 400
-                font-size: 20px
-                line-height: 24px
+                font-size: 18px
                 color: #FFFFFF
             &:not(:first-child)
-                margin-left: 55px
+                margin-left: 45px
             &::after
                 content: " "
                 position: absolute
