--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -2,7 +2,7 @@
     
 .btn
     background: $red
-    padding: 16px 50px
+    padding: 12px 35px
     border-radius: 8px
     border: none
     font-style: normal
@@ -18,12 +18,27 @@
         background: #FF1515
     &_yellow
         background: $second
+        text-decoration: none
         font-style: normal
         font-weight: 400
         font-size: 14px
         color: #000000
-        padding: 7px 21px
+        padding: 12px 22px
+        transition: 0.3s all
+        cursor: pointer
+        display: block
+        border: none
+        border-radius: 8px
         &:hover
             background: #FBFF51
         &:active
             background: #FAFF1B
+
+.inpt
+    width: 100%
+    box-sizing: border-box
+    border: 1px solid #C4C4C4
+    border-radius: 8px
+    font-size: 16px
+    padding: 15px 20px
+    user-select: none
