--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -5,6 +5,8 @@
     padding-top: 15px
     padding-bottom: 15px
     margin-bottom: 80px
+    a
+        text-decoration: none
     &__wrapper
         display: flex
         justify-content: space-between
