--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,3 +1,3 @@
-$red: #FF5555 !global
-$light_red: #ff7a7a !global
-$second: #FDFFB3 !global
+$red: #5EED75 !global
+$light_red: #8bf09b !global
+$second: #FFFB60 !global
