--- a/src/components/feed/feed.sass
+++ b/src/components/feed/feed.sass
@@ -1,7 +1,7 @@
 @import "../../styles/variables"
     
 .top
-    padding-bottom: 70px
+    padding-bottom: 45px
     &__wrapper
         display: flex
         justify-content: space-between
@@ -15,15 +15,19 @@
         &:hover
             transform: rotate(90deg)
 
+.feed__btn
+    display: flex
+    justify-content: center
+
 .news
-    padding-bottom: 100px
+    padding-bottom: 50px
 .events
-    padding-bottom: 100px
+    padding-bottom: 50px
 
 .content
     &__title
         position: relative
-        margin-bottom: 70px
+        margin-bottom: 40px
         display: inline-block
         text-decoration: none
         &::after
