--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -3,7 +3,7 @@
 *
     padding: 0
     margin: 0
-    font-family: 'Inter'
+    font-family: 'Inter' !important
 
 .container
     max-width: 1190px
