--- a/src/components/contentList/contentList.sass
+++ b/src/components/contentList/contentList.sass
@@ -12,14 +12,24 @@
             &:hover::after
                 width: 0
     &__panel
-        margin-bottom: 30px
         display: flex
         &--search
-            margin-right: 30px
             width: 100%
             display: flex
-        .inpt
-            margin-right: 30px
+        &--inpt
+            position: relative
+            width: 100%
+        &--close
+            position: absolute
+            right: 14px
+            top: 50%
+            width: 30px
+            cursor: pointer
+            opacity: 0.5
+            transform: translateY(-50%)
+    &__more
+        display: flex
+        justify-content: center
     &-item
         border-radius: 10px
         text-decoration: none
