--- a/src/components/discussionForFeed/discussionForFeed.sass
+++ b/src/components/discussionForFeed/discussionForFeed.sass
@@ -1,7 +1,7 @@
 .discussion
     &__wrapper
         display: grid
-        grid-template-columns: repeat(3, 1fr)
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))
         column-gap: 20px
         row-gap: 23px
             
