--- a/src/components/discussions/discussions.sass
+++ b/src/components/discussions/discussions.sass
@@ -4,7 +4,6 @@
         justify-content: space-between
         .btn
             padding: 16px 18px
-            margin-bottom: 60px
     &__content
         width: calc( 100% * 2 / 3 )
     &-item
@@ -18,8 +17,7 @@
                 color: black
     &__title
         margin-bottom: 60px
-    &__controlls
-        margin-bottom: 50px
     &__extra
         h4
             font-weight: 400
+            margin-top: 60px
