--- a/src/components/sortPanel/sortPanel.sass
+++ b/src/components/sortPanel/sortPanel.sass
@@ -2,7 +2,9 @@
 
 .sort
     display: flex
+    margin-left: 30px
     &-item
+        position: relative
         padding: 15px 20px
         border-width: 1px 1px 1px 1px
         border-style: solid
@@ -22,5 +24,16 @@
             background: $light_red
         &_active
             background: $red
+            border-color: $red
             &:hover
                 background: $red
+        &--img
+            padding: 0
+            padding-left: 15px
+            padding-right: 15px
+            display: flex
+            img
+                width: 33px
+                height: auto
+        &--date
+            width: max-content
