create chat rooms

--- a/src/components/sortPanel/sortPanel.sass
+++ b/src/components/sortPanel/sortPanel.sass
@@ -14,6 +14,7 @@
         cursor: pointer
         h5
             transition: 0.5s all
+            width: max-content
         &:first-child
             border-top-left-radius: 10px
             border-bottom-left-radius: 10px
