--- a/src/components/feed/feed.sass
+++ b/src/components/feed/feed.sass
@@ -50,3 +50,9 @@
     100%
         opacity: 1
             
+@media screen and ( max-width: 561px )
+    .top
+        padding-bottom: 25px
+    .content
+        &__title
+            margin-bottom: 20px
