--- a/src/components/profile/profile.sass
+++ b/src/components/profile/profile.sass
@@ -27,3 +27,15 @@
     .sort
         margin-bottom: 30px
         margin-left: 0px
+
+@media screen and ( max-width: 561px )
+    .profile
+        &__top
+            margin-bottom: 30px
+            &--info 
+                img
+                    max-width: 74px
+                    height: 74px
+        .sort
+            margin-bottom: 25px
+            
