--- a/src/components/searchPanel/searchPanel.sass
+++ b/src/components/searchPanel/searchPanel.sass
@@ -11,3 +11,12 @@
 .MuiOption-highlighted
     background-color: var(--joy-palette-primary-plainHoverBg, var(--joy-palette-primary-100, #8bf09b)) !important
     color: black !important
+
+@media screen and ( max-width: 983px )
+    .search
+        display: flex
+        flex-direction: column
+    .content
+        &__panel
+            &--search
+                margin-bottom: 20px
