--- a/src/components/singleContent/singleContent.sass
+++ b/src/components/singleContent/singleContent.sass
@@ -1,7 +1,6 @@
 @import "../../styles/variables"
     
 .article
-    padding-bottom: 80px
     &__content
         display: flex
         justify-content: space-between
@@ -120,13 +119,14 @@
         align-items: baseline
         h4
             margin-right: 24px
+            width: fit-content
     &__info
         display: flex
         margin-top: 50px
         &-item
             display: flex
             align-items: center
-            padding: 0 40px
+            padding: 0 26px
             &:first-child
                 padding-left: 0
             &:last-child
@@ -137,3 +137,60 @@
             img
                 margin-right: 15px
             
+@media screen and ( max-width: 1387px )
+    .similar
+        margin-top: 25px
+        .content
+            &__wrapper
+                display: flex
+                overflow: scroll
+            &-item
+                margin-right: 20px
+                margin-bottom: 0
+    .article
+        &__content
+            flex-direction: column
+@media screen and ( max-width: 923px )
+    .event
+        &__info
+            flex-wrap: wrap
+            &-item
+                &:nth-child(2)
+                    border-right: 0
+                &:nth-child(3)
+                    margin-top: 10px
+@media screen and ( max-width: 560px )
+    .article
+        &__content
+            flex-direction: column
+            &-item
+                margin-bottom: 15px
+            &-text
+                line-height: 20px
+            &-img
+                max-height: 139px
+        &__title
+            margin-bottom: 10px
+        &__meta
+            margin-bottom: 20px    
+    .similar
+        &__title
+            margin-bottom: 15px
+    .event
+        &__promo
+            margin-bottom: 20px
+            &--btns
+                left: 12px
+                bottom: 13px 
+        &__title
+            margin-bottom: 25px
+        &__main
+            flex-direction: column
+        &__info
+            justify-content: center
+            margin-top: 20px
+            &-item
+                padding: 0 18px
+                img
+                    width: 20px
+                    height: auto
