--- a/src/components/sortPanel/sortPanel.sass
+++ b/src/components/sortPanel/sortPanel.sass
@@ -38,3 +38,17 @@
                 height: auto
         &--date
             width: max-content
+
+@media screen and ( max-width: 983px )
+    .sort
+        margin-left: 0
+
+@media screen and ( max-width: 560px )
+    .sort
+        &-item
+            padding: 11px 14px
+
+@media screen and ( max-width: 475px )
+    .sort
+        overflow: scroll
+    
