--- a/src/components/discussionForFeed/discussionForFeed.sass
+++ b/src/components/discussionForFeed/discussionForFeed.sass
@@ -4,4 +4,9 @@
         grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))
         column-gap: 20px
         row-gap: 23px
-            
+        margin-bottom: 50px
+
+@media screen and ( max-width: 560px )
+    .discussion
+        &__wrapper
+            margin-bottom: 35px
