--- a/src/components/discussions/discussions.sass
+++ b/src/components/discussions/discussions.sass
@@ -21,11 +21,14 @@
             justify-content: center
             margin-top: 5px
     &__title
-        margin-bottom: 60px
+        &--wrapper
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin-bottom: 60px
     &__extra
         h4
             font-weight: 400
-            margin-top: 60px
     &__tags
         margin-top: 23px
         &-item
