--- a/src/styles/titles.sass
+++ b/src/styles/titles.sass
@@ -41,14 +41,36 @@ h6
     line-height: 17px
     color: #000000
 
-@media screen and ( max-width: 420px )
-    h1
-        font-size: 24px
-    h2
-        font-size: 20px
-
 .main-block
     padding-top: 60px
     padding-bottom: 100px
+
+@media screen and ( max-width: 560px )
+    h1
+        font-size: 20px
+        line-height: 24px
+    h2
+        font-size: 18px
+        line-height: 22px
+    h3
+        font-size: 17px
+        line-height: 20px
+    h4
+        font-size: 16px
+        line-height: 19px
+    p
+        font-size: 14px
+        line-height: 20px
+    h5
+        font-size: 12px
+        line-height: 15px
+    h6
+        font-size: 12px
+        line-height: 15px
+    .main-block
+        padding-top: 30px
+        padding-bottom: 60px
+
+
 
     
